# ml_uuid

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build-64.sh  configure.ac  ml_uuid.aps  ml_uuid.sln  ml_uuid.vcxproj  ml_uuid.vcxproj.filters  resource.h  uuid.h  uuid.hpp  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  cmake.yml
include/: CFunctions.h  Common.h  ml_uuid.h
luaimports/: CMakeLists.txt  luaimports.cpp
src/: CFunctions.cpp  CMakeLists.txt  ml_uuid.cpp
